# ra-port

./: .gitignore  CMakeLists.txt  NOTICE.md  README.md
.github/workflows/: macos-build.yml
CODE/: 2KEYFRAM.CPP  AADATA.CPP  ABSTRACT.CPP  ABSTRACT.H  ADATA.CPP  AIRCRAFT.CPP  AIRCRAFT.H  ANIM.CPP  ANIM.H  AUDIO.CPP  AUDIO.H  BASE.CPP  BASE.H  BASE64.CPP  BBDATA.CPP  BDATA.CPP  BUILDING.CPP  BUILDING.H  BULLET.CPP  BULLET.H  CARGO.CPP  CARGO.H  CCDDE.H  CCFILE.CPP  CCFILE.H  CDATA.CPP  CDFILE.CPP  CDFILE.H  CELL.CPP  CELL.H  CHECKBOX.CPP  CHECKBOX.H  CHEKLIST.CPP  CHEKLIST.H  COLRLIST.CPP  COLRLIST.H  COMBAT.CPP  COMBUF.CPP  COMBUF.H  COMPAT.H  (+238 more)
PORT/IOS/src/: ios_app_delegate.m  ios_main.cpp
PORT/MAC/include/: android_touch_gesture.h  dos.h  mac_sdl_runtime.h  mobile_touch_gesture.h  windows.h
PORT/MAC/src/: ccdde_stub.cpp  dos_compat.cpp  legacy_primitives.cpp  mac_sdl_runtime.cpp  main.cpp
WIN32LIB/INCLUDE/: RAWFILE.H
WIN32LIB/KEYBOARD/: MOUSE.CPP
WIN32LIB/MISC/: EXIT.CPP
WIN32LIB/TILE/: TILE.H
WIN32LIB/WSA/: WSA.CPP  wsa_file_format.h
android/app/: CMakeLists.txt
android/app/src/main/java/com/raport/redalert/: RedAlertActivity.java
cmake/: ra95_sources.cmake
docs/: mac-port-bugfix-traceability.md
ios/: CMakeLists.txt  Info.plist.in
scripts/: build_ios_debug.sh  prepare_assets_from_local.sh  run_ios_simulator.sh  run_mac_dev.sh  smoke_mac_menu.sh
tests/: android_touch_gesture_test.cpp  mobile_touch_gesture_test.cpp  run_script_tests.sh  vqa_file_smoke_test.cpp  wsa_file_format_test.cpp
