cmake_minimum_required(VERSION 3.22)

project(red_alert_mac LANGUAGES C CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 98)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)

find_package(PkgConfig REQUIRED)
pkg_check_modules(SDL2 REQUIRED IMPORTED_TARGET sdl2)

include(cmake/ra95_sources.cmake)

list(REMOVE_ITEM RA95_SOURCES
    CODE/KEYFRAME.CPP
    CODE/CCDDE.CPP
    CODE/DDE.CPP
    CODE/TCPIP.CPP
    CODE/LZWOTRAW.CPP
    CODE/MPLIB.CPP
    CODE/MPLPC.CPP
    CODE/MPMGRD.CPP
    CODE/MPMGRW.CPP
    CODE/NETDLG.CPP
    CODE/NULLCONN.CPP
    CODE/NULLMGR.CPP
    CODE/TARCOM.CPP
    CODE/TEMP.CPP
)

set(RA95_SUPPORT_SOURCES
    WIN32LIB/DRAWBUFF/BUFFER.CPP
    WIN32LIB/DRAWBUFF/BUFFGLBL.CPP
    WIN32LIB/DRAWBUFF/DRAWRECT.CPP
    WIN32LIB/DRAWBUFF/GBUFFER.CPP
    WIN32LIB/DRAWBUFF/ICONCACH.CPP
    WIN32LIB/DRAWBUFF/REGIONSZ.CPP
    WIN32LIB/FONT/FONT.CPP
    WIN32LIB/FONT/LOADFONT.CPP
    WIN32LIB/FONT/SET_FONT.CPP
    WIN32LIB/IFF/IFF.CPP
    WIN32LIB/IFF/LOAD.CPP
    WIN32LIB/KEYBOARD/MOUSE.CPP
    WIN32LIB/MEM/ALLOC.CPP
    WIN32LIB/MEM/MEM.CPP
    WIN32LIB/MISC/DDRAW.CPP
    WIN32LIB/MISC/DELAY.CPP
    WIN32LIB/MISC/EXIT.CPP
    WIN32LIB/MISC/FINDARGV.CPP
    WIN32LIB/MISC/IRANDOM.CPP
    WIN32LIB/MISC/LIB.CPP
    WIN32LIB/MISC/VERSION.CPP
    WIN32LIB/PLAYCD/GETCD.CPP
    WIN32LIB/SHAPE/GETSHAPE.CPP
    WIN32LIB/SHAPE/PRIOINIT.CPP
    WIN32LIB/TILE/ICONSET.CPP
    WIN32LIB/TIMER/TIMER.CPP
    WIN32LIB/TIMER/TIMERDWN.CPP
    WIN32LIB/WSA/WSA.CPP
)

add_executable(redalert_mac
    PORT/MAC/src/main.cpp
	    PORT/MAC/src/mac_audio_stub.cpp
	    PORT/MAC/src/mac_sdl_runtime.cpp
	    PORT/MAC/src/mac_timer.cpp
	    PORT/MAC/src/mac_vqa.cpp
	    PORT/MAC/src/dos_compat.cpp
    PORT/MAC/src/ccdde_stub.cpp
    PORT/MAC/src/tcpip_stub.cpp
    PORT/MAC/src/legacy_primitives.cpp
    ${RA95_SOURCES}
    ${RA95_SUPPORT_SOURCES}
)

target_include_directories(redalert_mac PRIVATE
    PORT/MAC/include
    WIN32LIB/INCLUDE
    WIN32LIB/DRAWBUFF
    WIN32LIB/AUDIO
    WIN32LIB/FONT
    WIN32LIB/IFF
    WIN32LIB/MISC
    WIN32LIB/KEYBOARD
    WIN32LIB/MEM
    WIN32LIB/MONO
    WIN32LIB/PALETTE
    WIN32LIB/PLAYCD
    WIN32LIB/RAWFILE
    WIN32LIB/SHAPE
    WIN32LIB/TILE
    WIN32LIB/TIMER
    WIN32LIB/WSA
    CODE
    CODE/ENG
    CODE/WOLAPI
    WWFLAT32/INCLUDE
    WWFLAT32/MCGAPRIM
    WWFLAT32/AUDIO
    WWFLAT32/FILE
    WWFLAT32/FONT
    WWFLAT32/IFF
    WWFLAT32/MISC
    WWFLAT32/PALETTE
    WWFLAT32/SHAPE
    WWFLAT32/TILE
    WWFLAT32/TIMER
    WWFLAT32/VIDEO
    WWFLAT32/WINDOWS
    WWFLAT32/WSA
    WINVQ/INCLUDE
    WINVQ/INCLUDE/WWLIB32
    WINVQ/INCLUDE/VQM32
    VQ/INCLUDE
    VQ/INCLUDE/WWLIB32
    VQ/INCLUDE/VQM32
)

target_link_libraries(redalert_mac PRIVATE
    PkgConfig::SDL2
)

target_compile_definitions(redalert_mac PRIVATE
    TRUE_FALSE_DEFINED
    WIN32
    _WINDOWS
    ENGLISH
    INTERNET_OFF
    GAME_VERSION=0x00030003
    VQADIRECT_SOUND=1
)

target_compile_options(redalert_mac PRIVATE
    -Wno-unknown-pragmas
    -Wno-deprecated-register
    -Wno-writable-strings
    -Wno-multichar
    -Wno-nonportable-include-path
)
